debug: missing image

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
@@ -14,7 +14,7 @@
 	<h1 class="main-title">回文圖產生器外傳 - 手寫的美好</h1>
 	<div class="main-content">
 		<div class="canvas-wrap">
-			<canvas id="canvas"></canvas>
+			<canvas id="canvas" width="500" height="607"></canvas>
 			<em class="copyright">柴犬圖片來源:https://www.flickr.com/photos/jfleming701/</em>
 		</div>
 		<div class="ctrl-panel">
