fix commit error

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="format-detection" content="telephone=no" />
 	<meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" />
-	<title>回文圖產生器外傳 - 手寫的美好</title>	 	
+	<title>回文圖產生器外傳 - 手繪的美好</title>	 	
 	<link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
-	<h1 class="main-title">回文圖產生器外傳 - <span class="xs-block">手寫的美好</span></h1>
+	<h1 class="main-title">回文圖產生器外傳 - <span class="xs-block">手繪的美好</span></h1>
 	<div class="main-content">
 		<div class="canvas-wrap">
 			<canvas id="canvas" width="500" height="607"></canvas>
@@ -41,7 +41,7 @@
 					<a class="btn-save">下載圖檔</a>
 				</li>
 			</ul>
-			<p class="desc">※ IE 無法選顏色<br>※ iphone 要下載圖檔請久按圖片另存新檔<br>我懶，其他原本該有的功能交給原作來補強吧XD</p>
+			<p class="desc">※ 只有 chrome 才能用色盤選顏色<br>※ iphone 要下載圖檔請久按圖片另存新檔<br>我懶，其他原本該有的功能交給原作來補強吧XD</p>
 		</div>
 	</div>
 </body>
