--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 	<link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-75048280-2', 'auto');
+		ga('send', 'pageview');
+	</script>
 	<h1 class="main-title">回文圖產生器外傳 - <span class="xs-block">手繪的美好</span></h1>
 	<div class="main-content">
 		<div class="canvas-wrap">
@@ -39,6 +44,7 @@
 				</li>
 				<li class="list">
 					<a class="btn-save">下載圖檔</a>
+					<a class="btn-fb">分享</a>
 				</li>
 			</ul>
 			<p class="desc">※ 只有 chrome 才能用色盤選顏色<br>※ iphone 要下載圖檔請久按圖片另存新檔<br>我懶，其他原本該有的功能交給原作來補強吧XD</p>
